[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Main_Menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Main_Menu" type="Control"]
margin_left = 223.071
margin_top = 4.2807
margin_right = 263.071
margin_bottom = 44.2807
script = ExtResource( 1 )

[node name="Pane" type="Panel" parent="."]
margin_left = -5.44147
margin_top = -2.72076
margin_right = 594.559
margin_bottom = 597.279

[node name="Main" type="VBoxContainer" parent="Pane"]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0

[node name="RichTextLabel" type="RichTextLabel" parent="Pane/Main"]
margin_right = 500.0
custom_styles/normal = SubResource( 1 )
text = "Main Menu"

[node name="ResumeButton" type="Button" parent="Pane/Main"]
margin_top = 4.0
margin_right = 500.0
margin_bottom = 24.0
text = "Resume"

[node name="SettingsButton" type="Button" parent="Pane/Main"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 48.0
text = "Settings"

[node name="CreditsButton" type="Button" parent="Pane/Main"]
margin_top = 52.0
margin_right = 500.0
margin_bottom = 72.0
text = "Credits"

[node name="ExitButton" type="Button" parent="Pane/Main"]
margin_top = 76.0
margin_right = 500.0
margin_bottom = 96.0
text = "Exit"

[node name="Settings" type="VBoxContainer" parent="Pane"]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0

[node name="RichTextLabel" type="RichTextLabel" parent="Pane/Settings"]
margin_right = 500.0
custom_styles/normal = SubResource( 1 )
text = "Settings"

[node name="BackButton" type="Button" parent="Pane/Settings"]
margin_top = 4.0
margin_right = 500.0
margin_bottom = 24.0
text = "Back"

[node name="Credits" type="VBoxContainer" parent="Pane"]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0

[node name="RichTextLabel" type="RichTextLabel" parent="Pane/Credits"]
margin_right = 500.0
custom_styles/normal = SubResource( 1 )
text = "Credits:
Shawn Dowling
Yi Fu"

[node name="BackButton" type="Button" parent="Pane/Credits"]
margin_top = 4.0
margin_right = 500.0
margin_bottom = 24.0
text = "Back"
[connection signal="pressed" from="Pane/Main/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pane/Main/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Pane/Main/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Pane/Main/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Pane/Settings/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Pane/Credits/BackButton" to="." method="_on_BackButton_pressed"]
